--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Change log
 ==========
 
+0.1.13
+------------------
+- Catching constuctor errors
+- Tabs and formatting
+
 0.1.12 (2017-11-29)
 -------------------
 - 4, 6 and 8 lts binaries
