--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,7 @@ Change log
 
 0.1.16 (2018-27-04)
 -------------------
-- BCD and Float input conversions
+- Decimal and Float input conversions #52 fix
 - Decimal libraries support, like decimal.js
 
 0.1.15 (2018-20-04)
