--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 Change log
 ==========
 
-1.0.0-rc4 (2018-08-29)
+1.0.0-rc5 (2018-10-30)
 ---------------------
 
 * N-API, asynchronous and non-blocking 
@@ -14,6 +14,7 @@ Change log
 * String handling optimisation
 * Tables processing harmonisation and memory consumption fix
 * BYTE and XSTRING unicode encoding removed
+* BCD and FLOAT accept strings, numbers or Decimal.js objects, return numbers
 * More unit tests
 * Empty fieldname removed from structures and tables (arrays)
 * Darwin support (in process)
@@ -24,6 +25,7 @@ Incompatible changes:
 * client.connectionInfo() gunction replaced by client.connectionInfo getter
 * client.getVersion() replaced by client.version getter, format changed as well
 * client.isAlive() replaced by client.isAlive getter
+* XSTRING and BYTE types work with Buffers only
 
 0.1.16 (2018-27-04)
 -------------------
