Fix #78 : SAP NW RFC SDK loading error message

--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,10 @@
 Change log
 ==========
 
-1.0.0-rc7 (xxxx-xx-xx)
+1.0.0-rc8 (xxxx-xx-xx)
 ---------------------
 
+* SAP NW RFC SDK loading error message improved 
 
 1.0.0-rc7 (2018-12-10)
 ---------------------
