--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ Change log
 1.0.0-rc8 (xxxx-xx-xx)
 ---------------------
 
-* SAP NW RFC SDK loading error message improved 
+* SAP NW RFC SDK loading error message improved 059383704c070fd05a5948d885192cce4c40a22b
 
 1.0.0-rc7 (2018-12-10)
 ---------------------
