--- a/CHANGES
+++ b/CHANGES
@@ -1,16 +1,21 @@
 Change log
 ==========
 
+1.0.0-rc10 (2019-05-31)
+-----------------------
+
+* revert to node-pre-gyp@12.0
+
 1.0.0-rc9 (2019-05-23)
----------------------
+----------------------
 
 * Dependencies clean-up, reducing peer dependencies
 * READMEs and examples clean-up
 
 1.0.0-rc8 (2019-05-22)
----------------------
+----------------------
 
-* SAP NW RFC SDK loading error message 
+* SAP NW RFC SDK loading error message
 * jest test framework
 * npm install --build-from-source fix #85
 * tar security audit fix
@@ -20,9 +25,9 @@ Change log
 * node v6 support dropped, v12 support added
 
 1.0.0-rc7 (2018-12-10)
----------------------
+----------------------
 
-* N-API, asynchronous and non-blocking 
+* N-API, asynchronous and non-blocking
 * Callback, promise, async/await API
 * Connection pool
 * Typescript and ES-next syntax support
@@ -47,9 +52,9 @@ Incompatible changes:
 * XSTRING and BYTE types work with Buffers only
 
 1.0.0-rc6 (2018-12-06)
----------------------
+----------------------
 
-* N-API, asynchronous and non-blocking 
+* N-API, asynchronous and non-blocking
 * Callback, promise, async/await API
 * Connection pool
 * Typescript and ES-next syntax support
@@ -74,9 +79,9 @@ Incompatible changes:
 * XSTRING and BYTE types work with Buffers only
 
 1.0.0-rc5 (2018-10-30)
----------------------
+----------------------
 
-* N-API, asynchronous and non-blocking 
+* N-API, asynchronous and non-blocking
 * Callback, promise, async/await API
 * Connection pool
 * Typescript and ES-next syntax support
