--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ Change log
 1.0.0-rc10 (2019-05-31)
 -----------------------
 
-* revert to node-pre-gyp@12.0
+* revert to node-pre-gyp@12.0, node-pre-gyp#463
 
 1.0.0-rc9 (2019-05-23)
 ----------------------
