--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Change log
 * No pre-built binary for nodejs version 11
 * NodeJS version 6 dropped
 * Input parameter array check added, fix #100
+* Connection options support in Conncetion Pool, fix #104
 
 1.0.0-rc10 (2019-05-31)
 -----------------------
