--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,11 @@
 Change log
 ==========
 
-1.0.0-rc12 (2019-10-01)
+1.0.0-rc14 (2019-10-01)
 -----------------------
 
 * Release source fix
+* Package name fix
 
 1.0.0-rc11 (2019-10-01)
 -----------------------
