Ping confirms the connection handle validity

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Change log
 ==========
 
+1.0.2 (2019-xx-xx)
+------------------
+
+* Ping confirms the connection handle validity
+* Unit tests for ABAP errors
+
 1.0.1 (2019-10-09)
 ------------------
 
