Windows build options and warning clean-up

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Change log
 ==========
 
+1.0.3 (2019-11-15)
+------------------
+* Windows build options and warning clean-up
+
 1.0.2 (2019-11-11)
 ------------------
 
