--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,15 @@
 Change log
 ==========
 
+1.0.4 (XXXX-YY-ZZ)
+------------------
+
+* Build script fix when node headers missing, fix #110
+
+
 1.0.3 (2019-11-14)
 ------------------
+
 * Windows build options and warning clean-up
 * VERSION file removed
 
