UTCLONG ABAP datatype support

--- a/CHANGES
+++ b/CHANGES
@@ -7,7 +7,7 @@ Change log
 * Connection Info update for PL6 e55783f #128
 * Concurrent locking fix for ConnectionInfo() c5a443b #128
 * Concurrent locking fix for invoke() and ping() 9cebb9a #128
-* Security audit fix by dependencies update, #129
+* Security audit fix by dependencies update; fixes #129
 
 1.0.5 (2020-03-09)
 ------------------
