--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Change log
 
 * Connection Pool ported to C++, guarded by Pool mutex
 * Connection attribute PartnerIPv6 added
+* Improved error handling
 * Exceptions from NodeJS/ABAP and ABAP/NodeJS conversions replaced by error objects
 * Error location path `rfmPath` attached to error objects
 * SAP NWRFC SDK post-installation fix for macOS removed
