--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Change log
 ==========
 
+2.0.1 (2020-07-20)
+------------------
+
+- CMakeLists.txt `--force-local` removed: pr#154
+
 2.0.0 (2020-07-20)
 ------------------
 
