--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Change log
 ==========
 
+2.0.2 (2020-07-22)
+------------------
+
+- CMake 3.18
+- CXX standard 17
+- Fix #158 Fatal error: Error getting v8 handle scope
+
 2.0.1 (2020-07-20)
 ------------------
 
