--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,11 @@
 Change log
 ==========
 
-2.0.3 (2020-XX-XX)
+2.0.3 (2020-07-27)
 ------------------
 
 - Environment object appended to error message when SAP NWRFC SDK not found or can't be loaded
+- Accidentally added p-queue dependency removed
 
 2.0.2 (2020-07-21)
 ------------------
