Fix error TS2741 closes #164

--- a/CHANGES
+++ b/CHANGES
@@ -4,8 +4,10 @@ Change log
 2.1.0 (2020-08-10)
 ------------------
 
-- CLA replaced with DCO, FSFE Reuse compliance
-- README added: the installation and build from source work for NodeJS versions with N-API >= 6; fix #162
+- CLA replaced with DCO, FSFE Reuse compliance 28a4ef5
+- README added: the installation and build from source work for NodeJS versions with N-API >= 6; fix #162 cda585c
+- NWRFC SDK Server API exposed dcc6b83
+-
 
 
 2.0.3 (2020-07-27)
