--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,8 @@ Change log
 2.1.1 (2020-xx-xx)
 ------------------
 
-- RFM table typing extended with Array of variables
+- RFM table typing extended with Array of variables 1becb1d
+- RFM call template published, added to README
 
 2.1.0 (2020-08-10)
 ------------------
