--- a/CHANGES
+++ b/CHANGES
@@ -4,10 +4,10 @@ Change log
 2.4.0 (XXXX-XX-XX)
 ------------------
 
-- ABAP CHARnn fields sent to Node, gets cut off after the first zero byte; fix #193 b4aeaf9
+- ABAP CHARnn fields sent to Node, get cut off after the first zero byte; fix #193 b4aeaf9
+- Node strings sent to ABAP CHARnn fields, get cut out after the first zero byte d7f516b
 - CMakeLists SDK version output ccaddd4
-- N-API versions support 6 and 7 d395ad0
-- Node strings sent to ABAP CHARnn fields, gets cut out after the first zero byte
+- N-API version 6 fixed d395ad0
 
 2.3.1 (2020-11-18)
 ------------------
